--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port = 4567
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform= postgres
+spring.datasource.url=jdbc\:postgresql\://localhost\:5432/test1
+spring.datasource.username=postgres
+spring.datasource.password=spring1
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
